[tool.poetry]
name = "influx-node-exporter"
version = "0.1.0"
description = ""
authors = ["alex <alexandre@garaia.fr>"]
readme = "README.md"
packages = [{include = "influx_node_exporter"}]

[tool.poetry.dependencies]
python = "^3.10"
influxdb = "^5.3.1"
python-decouple = "^3.6"
loguru = "^0.6.0"
apscheduler = "^3.9.1.post1"
ipython = "^8.7.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
